right panel added

--- a/howToUse.html
+++ b/howToUse.html
@@ -9,9 +9,15 @@
     </head>
 
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+        <script src="right panel.js"></script>
+
+        <section id="background">
+            <div id="my-background"></div> 
+        </section>
         <header>
             <div>
-                <a href="index.html">Home</a>
+                <a href="index.html">home</a>
             </div>
             <div>
                 <a href="about.html">about</a>
