--- a/inspiration.html
+++ b/inspiration.html
@@ -1,24 +1,30 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Inspiration</title>
-  <meta name="author" content="Hetvi Pethad">
-  <link rel="stylesheet" href="style2.css">
-</head>
+    <head>
+    <meta charset="utf-8">
+    <title>Inspiration</title>
+    <meta name="author" content="Hetvi Pethad">
+    <link rel="stylesheet" href="style2.css">
+    </head>
 
-<body>
-    <header>
-        <div>
-            <a href="index.html">Home</a>
-        </div>
-        <div>
-            <a href="about.html">about</a>
-            <a href="howToUse.html">howToUse</a>
-            <a href="canvas.html">canvas</a>
-        </div>
-    </header>
-    <h1>Inspiration</h1>
-</body>
+    <body>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+        <script src="right panel.js"></script>
+
+        <section id="background">
+            <div id="my-background"></div> 
+        </section>
+        <header>
+            <div>
+                <a href="index.html">home</a>
+            </div>
+            <div>
+                <a href="about.html">about</a>
+                <a href="howToUse.html">howToUse</a>
+                <a href="canvas.html">canvas</a>
+            </div>
+        </header>
+        <h1>Inspiration</h1>
+    </body>
 </html>
