--- a/about.html
+++ b/about.html
@@ -9,9 +9,16 @@
     </head>
 
     <body>
+        <script src="https://cdn.jsdelivr.net/npm/p5@1.4.0/lib/p5.js"></script>
+        <script src="right panel.js"></script>
+
+        <section id="background">
+            <div id="my-background"></div> 
+        </section>
+
         <header>
             <div>
-                <a href="index.html">Home</a>
+                <a href="index.html">home</a>
             </div>
             <div>
                 <a href="howToUse.html">howToUse</a>
@@ -20,5 +27,8 @@
             </div>
         </header>
         <h1>About</h1>
+        <p>
+            How 
+        </p>
     </body>
 </html>
