--- a/canvas.html
+++ b/canvas.html
@@ -18,7 +18,7 @@
 
       <header>
           <div>
-              <a href="home.html">home</a>
+              <a href="index.html">home</a>
           </div>
           <div>
               <a href="about.html">about</a>
