added the info pages

--- a/about.html
+++ b/about.html
@@ -26,9 +26,32 @@
                 <a href="canvas.html">canvas</a>
             </div>
         </header>
-        <h1>About</h1>
+        <h1>about</h1>
+        <h3>Pixel Playground: Your Digital Canvas for Effortless Wallpaper Design!</h3>
         <p>
-            How 
+            Have you ever dreamt of creating stunning, seamless wallpaper designs, but found yourself bogged down by the 
+            tedious process? Have you struggled with the complexities of traditional design tools, or spent hours painstakingly 
+            aligning patterns by hand? If so, I understand your frustration.
+            <br><br>
+            As a fellow design enthusiast, I experienced these same challenges firsthand. That's why I created Pixel Playground 
+            – a platform designed to make wallpaper design effortless, intuitive, and downright enjoyable!
+            <br><br>
+            Pixel Playground is more than just another design tool – it's your vibrant online oasis, your creative playground, 
+            and your gateway to unlimited design possibilities. With our user-friendly interface and innovative features, 
+            crafting seamless wallpapers has never been easier or more fun.
+            <br><br>
+            Whether you're a seasoned designer looking to streamline your workflow or a complete novice eager to explore 
+            the world of digital art, Pixel Playground welcomes you with open arms. Gone are the days of wrestling with 
+            rulers and erasers, or spending endless hours tweaking pixels. With Pixel Playground, you have the power to 
+            unleash your creativity and transform your design dreams into seamless works of art – effortlessly!
+            <br><br>
+            So why wait? Dive into our vibrant world of colors, patterns, and possibilities. Whether you're creating intricate 
+            patterns, experimenting with bold color combinations, or simply having fun, there's something for everyone in our 
+            digital wonderland.
+            <br><br>
+            Join me on this colorful journey, and let's make seamless design magic together!
+            <br><br>
+            Hetvi Pethad <3
         </p>
     </body>
 </html>
