--- a/howToUse.html
+++ b/howToUse.html
@@ -25,6 +25,29 @@
                 <a href="canvas.html">canvas</a>
             </div>
         </header>
-        <h1>How To Use</h1>
+        <h1>how to use</h1>
+        <p>
+            On the top right you will see Canvas, that's where you draw. Don't worry, it's intuitive!!
+            <br><br>
+            On this page the centeral white space is your creative space. The left panel contains all the different shape options and 
+            the right panel has all the different color options. More colors and shapes coming soon! On the bottom there are 4 buttons, 
+            clear, undo, priview, download. More about those later.
+            <br><br>
+            Default shape selected is a bucket looking one used to change the background and the defualt color is black. You can 
+            select any color and make that the background. Background can be changed at any time without affecting the design on top!! 
+            Select any shape from the left panel and select a color from the right and hover your mouse over the central canvas to 
+            preview that shape. You can also change the size of the shape by clicking either of the arrow keys! Experiment with 
+            different shapes and colors and sizes. Preview the design at different locations and once satisfied left click and it will 
+            paste it at that location. If you make a mistake that's fine, we have the undo button!
+            <br><br>
+            More about buttons! Clear will clear the whole canvas and it will revert back to a blank white. Be careful while 
+            using this, there is no way of going back. Undo button will remove the last pasted shape and it can be used multiple times. It 
+            however won't revert the background, but no worries, use the background shape for that! Preview and Download are still in 
+            progress. Look out for updates!
+            <br><br>
+            Are you confused what this is go to <a style="font-family:'Times New Roman', Times, serif; margin-left: 0px; margin-right: 0px;" href="inspiration.html">inspiration</a>.
+            <br><br>
+            Begin this colorful journey, and make seamless design!
+        </p>
     </body>
 </html>
